<resources>
    <string name="app_name">Popular Movies</string>
    <string name="original_title_title">Original title</string>
    <string name="user_rating_title">User rating</string>
    <string name="release_date_title">Release date</string>
    <string name="overview_title">Overview</string>
    <string name="title_text">The Matrix</string>
    <string name="rating_text">8.0</string>
    <string name="user_rating_text">1999-03-30</string>
    <string name="overview_text">Set in the 22nd century, The Matrix tells the story of a computer hacker who joins a group of underground insurgents fighting the vast and powerful computers who now rule the earth.</string>
    <string name="movie_background_image">Movie background image</string>
    <string name="movie_poster_image">Movie poster image</string>
    <string name="sort">Sort</string>
    <string name="popular">Popular</string>
    <string name="highest_rated">Top rated</string>
    <string name="wrong">Something went wrong!</string>
    <string name="already_popular">Already displaying popular movies</string>
    <string name="already_top">Already displaying top rated movies</string>\
    <string name="already_favourite">Already displaying favourite movies</string>
    <string name="popular_movies_title">Popular Movies</string>
    <string name="highest_rated_title">Top Rated Movies</string>
    <string name="favourite_title">Favourite Movies</string>
    <string name="no_internet">No Internet connection!</string>
    <string name="trailers">Trailers</string>
    <string name="trailer">Trailer</string>
    <string name="comments">Comments</string>
    <string name="comment">Comment</string>
    <string name="trailer_name">Trailer\'s name</string>
    <string name="meredith">Meredith</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="favourite">Favourite</string>
    <string name="no_data">No data available</string>
    <string name="youtube_app">Install Youtube app for android!</string>
    <string name="unknown_uri">Unknown uri: </string>
    <string name="not_yet">Not yet implemented!</string>
    <string name="failed_insert">Failed to insert row into</string>
    <string name="no_favourite_movies">No favourite movies!</string>
    <string name="favourite_or_not_favourite">Image for favourite or not favourite.</string>
    <string name="trailer_s_image">Trailer\'s image.</string>
</resources>
